@@ -233,6 +233,19 @@ std::string interpolate_variables_into_string(const std::string &str, variable_s
 	return res;
 }
 
+// modify a number by string representing integer difference, or optionally %
+int apply_modifier( const int number, const std::string &amount, const int minimum ) {
+	// wassert( amount.empty() == false );
+	int value = atoi(amount.c_str());
+	if(amount[amount.size()-1] == '%') {
+		value = div100rounded(number * value);
+	}
+	value += number;
+	if (( minimum > 0 ) && ( value < minimum ))
+	    value = minimum;
+	return value;
+}
+
 //Prepends a configurable set of characters with a backslash
 std::string &escape(std::string &str, const std::string& special_chars)
 {
