@@ -71,6 +71,7 @@ SVN trunk (1.1.x):
    * slowed units do not emit ZoC
    * hitting with slow changes attack order to allow attacker to strike again
    * slowed units lose initiative on fight
+   * unit modifications now round toward original value instead of truncating
  * units and balancing changes:
    * decreased Dwarvish Fighter hammer attack damage from 9 to 8
    * decreased Merman Hunter experience needed to level from 38 to 35
